--- a/package.json
+++ b/package.json
@@ -8,5 +8,14 @@
   },
   "author": "",
   "license": "ISC",
-  "private":true
+  "private": true,
+  "dependencies": {
+    "bluebird": "^2.10.0",
+    "express": "^4.13.3",
+    "lodash": "^3.10.1",
+    "mime-types": "^2.1.6",
+    "mkdirp": "^0.5.1",
+    "multer": "^1.0.3",
+    "uid": "0.0.2"
+  }
 }
