--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   "private": true,
   "dependencies": {
     "bluebird": "^2.10.0",
+    "body-parser": "^1.14.1",
     "express": "^4.13.3",
     "lodash": "^3.10.1",
     "mime-types": "^2.1.6",
     "mkdirp": "^0.5.1",
+    "morgan": "^1.6.1",
     "multer": "^1.0.3",
+    "serve-favicon": "^2.3.0",
+    "swig": "^1.4.2",
     "uid": "0.0.2"
   }
 }
