--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "multer": "^1.0.3",
     "nodemailer": "^1.9.0",
     "serve-favicon": "^2.3.0",
+    "string-format": "^0.5.0",
     "swig": "^1.4.2",
     "uid": "0.0.2",
     "xoauth2": "^1.1.0"
