--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cookie-parser": "^1.4.0",
     "date-utils": "^1.2.17",
     "express": "^4.13.3",
+    "express-session": "^1.12.1",
     "lodash": "^3.10.1",
     "mime-types": "^2.1.6",
     "mkdirp": "^0.5.1",
