--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "private": true,
   "dependencies": {
+    "base64-url": "^1.2.1",
     "bluebird": "^2.10.0",
     "body-parser": "^1.14.1",
     "cookie-parser": "^1.4.0",
@@ -22,6 +23,7 @@
     "morgan": "^1.6.1",
     "multer": "^1.0.3",
     "nodemailer": "^1.9.0",
+    "request": "^2.67.0",
     "serve-favicon": "^2.3.0",
     "string-format": "^0.5.0",
     "swig": "^1.4.2",
