--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
     "date-utils": "^1.2.17",
     "express": "^4.13.3",
     "express-session": "^1.12.1",
+    "jimp": "^0.2.21",
     "lodash": "^3.10.1",
-    "mime-types": "^2.1.6",
+    "mime-types": "^2.1.8",
     "mkdirp": "^0.5.1",
     "morgan": "^1.6.1",
     "multer": "^1.0.3",
+    "mv": "^2.1.1",
     "nodemailer": "^1.9.0",
     "request": "^2.67.0",
     "serve-favicon": "^2.3.0",
