--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "foduler",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "",
-  "main": "foduler1.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "macha test"
   },
   "author": "",
   "license": "ISC",
